{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "3067074a-13dd-4527-a1ad-bb0f0847bcf2",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "3d0e9f15-ed16-40fb-a7df-370a829e02b5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e2bfefc2-0ebf-4b82-a3b2-7749d25a88d3",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UIControls",
            "id": "658ed16d-9dda-407c-acbc-59f2da280210",
            "actions": [
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "50de6c91-70e1-4301-bb00-aa60b96829af",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "5e279dbc-1d00-4a10-94d8-8d228532f160",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "09ffb3b9-26e9-4ffe-921f-37d89ff6c644",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "34860724-359f-48c3-9b2b-f272149f4fc0",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}